# zypher-circom-compat

./: Cargo.toml  README.md
materials/2048/: game2048_60.wasm
materials/crypto_rumble/: crypto_rumble_30.wasm
src/: bls12_381.rs  input.rs  lib.rs  prove.rs
