[package]
name = "zypher-circom-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-circom = { git = "https://github.com/zypher-game/circom-compat"}
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false }
ark-snark = { version = "=0.4.0" }
num-bigint = "=0.4.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.79"
rand = "0.8"
rand_chacha = "0.3.1"
wasmer = { version = "=2.3.0", default-features = false }

[features]
default = ["parallel"]
parallel = ["ark-groth16/parallel", "ark-circom/parallel"]